# aws-s3-copy-sync-using-batch

src/: Dockerfile  main.py  pyproject.toml  s3_copy_async.py  s3_copy_sync.py
